# sand-volume-calculator

./: CMakeLists.txt  README.md  main.cpp
open3d/CMake/: Open3DConfig.cmake  Open3DConfigVersion.cmake  Open3DTargets-debug.cmake  Open3DTargets.cmake
